name:                ed25519-rings
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            http://github.com/githubuser/ed25519-rings#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2010 Author Here
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Ed25519
                     , Ring
                     , Curve
                     , ZKP
  other-modules:       Encoding
  ghc-options:         -Wall -O2 -fno-warn-type-defaults -threaded -rtsopts -with-rtsopts=-N  -fsimpl-tick-factor=200
  build-depends:       base >= 4.7 && < 5
                     , cryptohash
                     , bytestring
                     , base64-bytestring
                     , binary
                     , modular-arithmetic
                     , largeword
  default-language:    Haskell2010

test-suite ed25519-rings-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , ed25519-rings
                     , bytestring
                     , base16-bytestring
                     , hspec
                     , binary
  ghc-options:         -Wall -O2 -fno-warn-type-defaults -threaded -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/ed25519-rings
